adding SEC EDGAR link

--- a/document_search/Section Extraction - 3 Documents.ipynb
+++ b/document_search/Section Extraction - 3 Documents.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "Use this repo's [Github Codespace](https://codespaces.new/CamDuffy1/rag_bootcamp) to run the notebook with all required dependencies installed.\n",
     "  - Specifically, the executable <code>[wkhtmltopdf](https://wkhtmltopdf.org/)</code> comes installed in the Github Codespace configuration. This is needed to convert webpages to PDF documents using the <code>[pdfkit](https://pypi.org/project/pdfkit/)</code> library.\n",
-    "  - These PDF documents can be too large (>25 GB) to store in the Github repo."
+    "  - These PDF documents can be too large (>25 GB) to store in the Github repo.\n",
+    " \n",
+    "Additional S-1 forms can be found using the [SEC EDGAR](https://www.sec.gov/edgar/search/#/category=custom&forms=S-1) System."
    ]
   },
   {
