updating devcontainer config, adding Symetra doc

--- a/document_search/Section Extraction - 3 Documents.ipynb
+++ b/document_search/Section Extraction - 3 Documents.ipynb
@@ -41,15 +41,16 @@
    "outputs": [],
    "source": [
     "s1_url_dict = {\n",
-    "    'reddit': 'https://www.sec.gov/Archives/edgar/data/1713445/000162828024006294/reddits-1q423.htm',\n",
-    "    'facebook': 'https://www.sec.gov/Archives/edgar/data/1326801/000119312512034517/d287954ds1.htm',\n",
-    "    'turo': 'https://www.sec.gov/Archives/edgar/data/1514587/000119312522005696/d145731ds1.htm',\n",
+    "    'Reddit': 'https://www.sec.gov/Archives/edgar/data/1713445/000162828024006294/reddits-1q423.htm',\n",
+    "    'Facebook': 'https://www.sec.gov/Archives/edgar/data/1326801/000119312512034517/d287954ds1.htm',\n",
+    "    'Turo': 'https://www.sec.gov/Archives/edgar/data/1514587/000119312522005696/d145731ds1.htm',\n",
+    "    'Symetra': 'https://www.sec.gov/Archives/edgar/data/1559495/000155949524000020/a2024-04x01treksx1.htm'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "induced-arbor",
    "metadata": {},
    "outputs": [],
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "proper-universal",
    "metadata": {},
    "outputs": [
@@ -80,9 +81,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Truncated file already exists at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/reddit - Truncated - TOC.pdf\n",
-      "Truncated file already exists at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/turo - Truncated - TOC.pdf\n",
-      "Truncated file already exists at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/facebook - Truncated - TOC.pdf\n"
+      "Saved truncated doc at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/Turo - Truncated - TOC.pdf\n",
+      "Saved truncated doc at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/Facebook - Truncated - TOC.pdf\n",
+      "Saved truncated doc at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/Symetra - Truncated - TOC.pdf\n",
+      "Saved truncated doc at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/Truncated/Reddit - Truncated - TOC.pdf\n"
      ]
     }
    ],
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "subsequent-vacuum",
    "metadata": {},
    "outputs": [],
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "id": "55f37be3",
    "metadata": {},
    "outputs": [
@@ -149,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8581/2083134847.py:16: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "/tmp/ipykernel_15710/2083134847.py:16: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
       "  service_context = ServiceContext.from_defaults(\n"
      ]
     }
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "id": "d8207b98",
    "metadata": {},
    "outputs": [],
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "id": "c48b527e",
    "metadata": {},
    "outputs": [
@@ -229,23 +231,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "turo S-1 sections:\n",
-      "    Prospectus summary\n",
-      "    Risk factors\n",
-      "    Special note regarding forward-looking statements\n",
-      "    Market, industry, and other data\n",
-      "    ...\n",
-      "reddit S-1 sections:\n",
+      "Reddit S-1 sections:\n",
       "    Letter From Our Co-Founder\n",
       "    Prospectus Summary\n",
       "    Risk Factors\n",
       "    Special Note Regarding Forward-Looking Statements\n",
       "    ...\n",
-      "facebook S-1 sections:\n",
+      "Symetra S-1 sections:\n",
+      "    Defined Terms\n",
+      "    Summary\n",
+      "    Risk Factors\n",
+      "    The Annuity Contract\n",
+      "    ...\n",
+      "Facebook S-1 sections:\n",
       "    Prospectus Summary\n",
       "    Risk Factors\n",
       "    Special Note Regarding Forward-Looking Statements\n",
       "    Industry Data and User Metrics\n",
+      "    ...\n",
+      "Turo S-1 sections:\n",
+      "    Prospectus summary\n",
+      "    Risk factors\n",
+      "    Special note regarding forward-looking statements\n",
+      "    Market, industry, and other data\n",
       "    ...\n"
      ]
     }
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "id": "4f040163",
    "metadata": {},
    "outputs": [
@@ -277,15 +285,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted Risk Factors section from turo.pdf.\n",
-      "    44778 words\n",
-      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/turo/Risk Factors.txt\n",
-      "Extracted Risk Factors section from reddit.pdf.\n",
+      "Extracted risk factors section from Reddit.pdf.\n",
       "    44446 words\n",
-      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/reddit/Risk Factors.txt\n",
-      "Extracted Risk Factors section from facebook.pdf.\n",
+      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/Reddit/risk factors.txt\n",
+      "\n",
+      "Could not find start_str: \"risk factors\"\n",
+      "\n",
+      "Extracted risk factors section from Facebook.pdf.\n",
       "    14171 words\n",
-      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/facebook/Risk Factors.txt\n"
+      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/Facebook/risk factors.txt\n",
+      "\n",
+      "Extracted risk factors section from Turo.pdf.\n",
+      "    44778 words\n",
+      "    Saved at: /workspaces/rag_bootcamp/document_search/webpage_to_pdf/extracted_sections/Turo/risk factors.txt\n",
+      "\n"
      ]
     }
    ],
@@ -293,8 +306,12 @@
     "from utils import get_item_after, get_words_from_PDF, get_section    # helper functions defined in utils.py\n",
     "\n",
     "target_section = 'Risk Factors'\n",
+    "target_section = target_section.lower()     # convert target string to lowercase\n",
     "\n",
     "for key, value in sections_dict.items():\n",
+    "    # print(f\"Getting section body for {key}\")\n",
+    "    document_sections = [section.lower() for section in value]      # convert list of section titles to lowercase -- to match with target string\n",
+    "\n",
     "    next_section = get_item_after(document_sections, target_section)\n",
     "\n",
     "    file_name = f\"{key}.pdf\"\n",
@@ -325,7 +342,8 @@
     "            \n",
     "            with open(section_output_file_path, \"w\") as file:\n",
     "                file.write(body)\n",
-    "            print(f\"{' '*4}Saved at: {section_output_file_path}\")"
+    "            print(f\"{' '*4}Saved at: {section_output_file_path}\")\n",
+    "    print()"
    ]
   },
   {
@@ -353,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
